test/ambig6.l1.out
error: reference to unbound variable: p
	#0                   entry	(ambig6.l1:2)
