test/ambig6.l1
// should pick cast interpretation
p+(t)&p->f;
